[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-feedback"
version = "0.1.0"
description = "Lightweight Flask feedback tool to reduce Cursor Agent requests"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Louis Guichard", email = "lguichard@yahoo.fr" }
]
dependencies = [
    "Flask>=2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]

[project.urls]
Homepage = "https://github.com/louisguichard/cursor-feedback"

[tool.setuptools]
py-modules = ["feedback"]
